tests/ui/unsupported_binary_op.stderr
[tests/ui/unsupported_binary_op.pea:2:14-2:20] error: mismatched types: expected `[u8]`, found: `i64`

error: aborting due to 1 previous error

