tests/ui/unsupported_binary_op.pea
fn main() {
    println!(b"3245" - 3);
}
